--- a/GameNamesAssistant/NameGenerator.csproj
+++ b/GameNamesAssistant/NameGenerator.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2E8A93E4-19D9-42AE-9016-CABE4E7C9E9E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GameNamesAssistant</RootNamespace>
-    <AssemblyName>GameNamesAssistant</AssemblyName>
+    <RootNamespace>NameGenerator</RootNamespace>
+    <AssemblyName>NameGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
